admin page updated and logo

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="container header-inner">
       <a href="#hero" class="logo-link">
         <img
-          src="images/wellbridge-logo.jpg"
+          src="images/logo.png"
           alt="WellBridge Social"
           class="logo-image"
         />
