--- a/admin/index.html
+++ b/admin/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8" />
-  <title>WellBridge Social Admin</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+    <meta charset="UTF-8">
+    <title>WellBridge Social – Admin</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- Netlify CMS Script -->
-  <script src="https://unpkg.com/netlify-cms@2/dist/netlify-cms.js"></script>
+    <!-- Netlify CMS -->
+    <script src="https://unpkg.com/netlify-cms@2/dist/netlify-cms.js"></script>
 </head>
 <body>
 </body>
