--- a/index.html
+++ b/index.html
@@ -2,255 +2,245 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>WellBridge Social – Event Venue in Birmingham, AL</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>WellBridge Social</title>
 
-    <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=DM+Sans:wght@300;400;500&display=swap" rel="stylesheet">
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=DM+Sans:wght@400;500&display=swap" rel="stylesheet">
 
     <!-- Stylesheet -->
     <link rel="stylesheet" href="style/style.css" />
-
-    <!-- Netlify Identity (CMS Login) -->
-    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 </head>
 
 <body>
 
 <!-- ================= HEADER ================= -->
 <header class="header">
-    <div class="container header-inner">
+    <div class="nav-container">
 
         <!-- LOGO -->
         <a href="#hero" class="logo-link">
-            <img src="images/logo.png" alt="WellBridge Social Logo" class="logo">
+            <img src="images/logo.png" alt="WellBridge Social Logo" class="logo-img">
         </a>
 
-        <!-- MOBILE MENU BUTTON -->
-        <button class="nav-toggle" aria-label="Toggle navigation">
-            <span></span><span></span><span></span>
-        </button>
-
-        <!-- NAVIGATION MENU -->
+        <!-- NAVIGATION -->
         <nav class="nav">
-            <ul class="nav-list">
-                <li><a href="#hero">Home</a></li>
-                <li><a href="#about">Welcome</a></li>
-                <li><a href="#venue">Venue Details</a></li>
-                <li><a href="#events">Previous Events</a></li>
-                <li><a href="#rentals">Rentals</a></li>
-                <li><a href="#plan">Plan Your Event</a></li>
-                <li><a href="#faqs">FAQ’s</a></li>
-                <li><a href="#how">How It Started</a></li>
-                <li><a href="#contact">Contact Us</a></li>
+            <button class="nav-toggle" id="navToggle">
+                <span></span><span></span><span></span>
+            </button>
+
+            <ul class="nav-links" id="navLinks">
+                <li><a href="#hero">HOME</a></li>
+                <li><a href="#events">PREVIOUS EVENTS</a></li>
+                <li><a href="#rentals">RENTALS</a></li>
+                <li><a href="#plan">PLAN YOUR EVENT</a></li>
+                <li><a href="#faqs">FAQ'S</a></li>
+                <li><a href="#how">HOW IT STARTED</a></li>
+                <li><a href="#contact">CONTACT US</a></li>
             </ul>
         </nav>
 
     </div>
 </header>
 
-
-<!-- ================= HERO SECTION ================= -->
+<!-- ================= HERO ================= -->
 <section id="hero" class="hero">
-    <div class="container hero-inner">
 
-        <p class="hero-location">BIRMINGHAM, AL • FORESTDALE</p>
+    <p class="hero-location">BIRMINGHAM, AL • FORESTDALE</p>
 
-        <h1 class="hero-title">
-            Beautiful, flexible space <br>
-            for your next event.
-        </h1>
+    <h1 class="hero-title">
+        Beautiful, flexible<br>
+        space for your next<br>
+        event.
+    </h1>
 
-        <p class="hero-subtext">
-            Host showers, parties, meetings, repasts & more at WellBridge Social. 
-            Two rooms, simple pricing, and a warm atmosphere.
+    <p class="hero-subtext">
+        Host showers, birthday parties, meetings, repasts, and more at WellBridge Social. Two rooms, simple pricing, and a welcoming atmosphere.
+    </p>
+
+    <div class="hero-buttons">
+        <a href="#rentals" class="btn gold">View Rental Options</a>
+        <a href="#contact" class="btn outline">Check Date Availability</a>
+    </div>
+
+    <p class="hero-phone">Call or text <strong>205-504-6812</strong> to get started.</p>
+
+</section>
+
+<!-- ================= WELCOME SECTION ================= -->
+<section id="welcome" class="welcome">
+    <div class="welcome-left">
+        <h2>Welcome to WellBridge Social</h2>
+
+        <p>
+            WellBridge Social is a locally owned event and conference venue in Birmingham, AL,
+            operated by <strong>Lynn Wilkerson</strong>. Our goal is to make hosting your event simple,
+            affordable, and stress-free.
         </p>
 
-        <div class="hero-buttons">
-            <a href="#rentals" class="btn-gold">View Rental Options</a>
-            <a href="#contact" class="btn-outline">Check Date Availability</a>
-        </div>
-
-        <p class="hero-call">
-            Call or text <strong>205-504-6812</strong> to book your event.
-        </p>
-
-    </div>
-</section>
-
-
-<!-- ================= ABOUT SECTION ================= -->
-<section id="about" class="section">
-    <div class="container">
-        <h2 class="section-title">Welcome to WellBridge Social</h2>
-        <p class="section-text">
-            We offer an affordable, flexible space for families and businesses in the Birmingham and Forestdale area. 
-            Our venue is perfect for baby showers, birthday parties, repasts, meetings, pop-up shops, and celebrations of all sizes.
+        <p>
+            With two flexible spaces, included tables and chairs, and optional linen rentals, you can style the room to match your colors and theme. Bring your own planner, caterer, DJ, and décor — or keep it simple and intimate.
         </p>
     </div>
-</section>
 
-
-<!-- ================= VENUE DETAILS ================= -->
-<section id="venue" class="section">
-    <div class="container two-column">
-
-        <div class="column">
-            <h2 class="section-title">Venue Details</h2>
-            <ul class="details-list">
-                <li>✓ Large Room Capacity: 100 Guests</li>
-                <li>✓ Small Room Capacity: 50 Guests</li>
-                <li>✓ Free Tables & Chairs Included</li>
-                <li>✓ Optional Linen Rentals</li>
-                <li>✓ Convenient Forestdale Location</li>
-            </ul>
-        </div>
-
-        <div class="column">
-            <p class="section-text">
-                We provide round and rectangle lifetime tables, folding chairs, and optional linen at great rates. Setup and cleanup times are included in your rental window.
-            </p>
-        </div>
-
+    <div class="welcome-card">
+        <h3>Venue Details</h3>
+        <ul>
+            <li><strong>Large Room Capacity:</strong> 100 guests</li>
+            <li><strong>Small Room Capacity:</strong> 50 guests</li>
+            <li>Tables & chairs included</li>
+            <li>Optional linen rentals</li>
+        </ul>
     </div>
 </section>
 
-
-<!-- ================= PREVIOUS EVENTS ================= -->
-<section id="events" class="section">
-    <div class="container">
-        <h2 class="section-title">Previous Events</h2>
-        <p class="coming-soon">Coming Soon</p>
-    </div>
+<!-- ================= EVENTS ================= -->
+<section id="events" class="events">
+    <h2>Previous Events</h2>
+    <p>Gallery coming soon as we add photos from upcoming events.</p>
 </section>
 
+<!-- ================= RENTALS ================= -->
+<section id="rentals" class="rentals">
 
-<!-- ================= RENTAL OPTIONS ================= -->
-<section id="rentals" class="section">
-    <div class="container">
-        <h2 class="section-title">Rental Pricing</h2>
+    <h2>2026 Rental Information</h2>
+    <p class="subtitle">Clear pricing for both the large and small rooms.</p>
 
-        <div class="pricing-grid">
+    <div class="rental-note">
+        All rentals are for up to <strong>8 hours</strong>. Additional time is <strong>$100 per hour</strong>.
+        Events must end on time; setup + cleanup are included in your rental window.
+    </div>
 
-            <div class="pricing-card">
-                <h3>Large Room</h3>
-                <p class="price">$700 – Day Event (9am–5pm)</p>
-                <p class="price">$900 – Evening Event (4pm–12am)</p>
-            </div>
+    <div class="rental-grid">
+        <!-- LARGE ROOM -->
+        <div class="rental-card">
+            <h3>Large Room</h3>
+            <p><strong>Up to 100 guests</strong></p>
 
-            <div class="pricing-card">
-                <h3>Small Room</h3>
-                <p class="price">$600 – Day Event (9am–5pm)</p>
-                <p class="price">$700 – Evening Event (4pm–12am)</p>
-            </div>
+            <p class="price-title">Day Events (9AM – 5PM)</p>
+            <p class="price">$700</p>
 
+            <p class="price-title">Evening Events (8 hours)</p>
+            <p class="price">$900</p>
         </div>
 
-        <p class="note">
-            Additional time is $100/hr. Events must end at their scheduled time.  
-            A $100 refundable cleaning deposit is required.
-        </p>
+        <!-- SMALL ROOM -->
+        <div class="rental-card">
+            <h3>Small Room</h3>
+            <p><strong>Up to 50 guests</strong></p>
 
+            <p class="price-title">Day Events (9AM – 5PM)</p>
+            <p class="price">$600</p>
+
+            <p class="price-title">Evening Events (8 hours)</p>
+            <p class="price">$700</p>
+        </div>
     </div>
-</section>
 
+</section>
 
 <!-- ================= PLAN YOUR EVENT ================= -->
-<section id="plan" class="section">
-    <div class="container two-column">
+<section id="plan" class="plan">
+    <h2>Plan Your Event</h2>
+    <p>We keep the process simple so you can focus on celebrating.</p>
 
-        <div class="column">
-            <h2 class="section-title">Plan Your Event</h2>
-            <p>Our space is designed to be flexible for any occasion. Bring your own decorations or hire a planner.</p>
+    <div class="plan-steps">
+        <div class="step">
+            <h3>1. Check Your Date</h3>
+            <p>Send your preferred date, time frame, and guest count.</p>
         </div>
 
-        <div class="column">
-            <ul class="details-list">
-                <li>✓ Receptions</li>
-                <li>✓ Baby Showers</li>
-                <li>✓ Birthday Parties</li>
-                <li>✓ Repasts</li>
-                <li>✓ Meetings & Trainings</li>
-            </ul>
+        <div class="step">
+            <h3>2. Reserve Your Room</h3>
+            <p>Secure your date with a 50% deposit and signed rental agreement.</p>
         </div>
 
-    </div>
-</section>
-
-
-<!-- ================= FAQ SECTION ================= -->
-<section id="faqs" class="section">
-    <div class="container">
-        <h2 class="section-title">Frequently Asked Questions</h2>
-
-        <div class="faq-list">
-
-            <div class="faq-item">
-                <h3 class="faq-question">Can we serve alcohol?</h3>
-                <p class="faq-answer">
-                    Yes—if you have more than 50 guests and serve alcohol, the City of Adamsville requires a police officer.
-                </p>
-            </div>
-
-            <div class="faq-item">
-                <h3 class="faq-question">Is setup time included?</h3>
-                <p class="faq-answer">Yes, setup and breakdown time are included in your 8-hour rental window.</p>
-            </div>
-
-            <div class="faq-item">
-                <h3 class="faq-question">How do I reserve a date?</h3>
-                <p class="faq-answer">
-                    A signed contract plus 50% deposit holds your date. Remaining balance due 5 days before event.
-                </p>
-            </div>
-
+        <div class="step">
+            <h3>3. Bring Your Vision</h3>
+            <p>Decorate and host your event the way you imagined it.</p>
         </div>
     </div>
 </section>
 
+<!-- ================= FAQ ================= -->
+<section id="faqs" class="faqs">
+    <h2>FAQ’s</h2>
+    <p>Answers to common questions about renting the venue.</p>
+
+    <details>
+        <summary>Can I bring my own food and cake?</summary>
+        <p>Yes, outside food is allowed.</p>
+    </details>
+
+    <details>
+        <summary>Can I bring a DJ and loud music?</summary>
+        <p>Yes, DJs and speakers are welcome.</p>
+    </details>
+
+    <details>
+        <summary>Do you offer tours?</summary>
+        <p>Yes, call to schedule a walkthrough.</p>
+    </details>
+
+    <details>
+        <summary>Do you provide décor?</summary>
+        <p>Clients bring their own décor.</p>
+    </details>
+</section>
 
 <!-- ================= HOW IT STARTED ================= -->
-<section id="how" class="section">
-    <div class="container">
-        <h2 class="section-title">How It Started</h2>
-        <p class="section-text">
-            WellBridge Social was created to give our community a modern, welcoming space for meaningful gatherings, celebrations, and shared moments.
-        </p>
+<section id="how" class="how">
+    <h2>How It Started</h2>
+
+    <p>
+        WellBridge Social was created by <strong>Lynn Wilkerson</strong> as a warm, flexible gathering space
+        for families and organizations in Birmingham.
+    </p>
+
+    <div class="how-card">
+        <h3>Our Commitment</h3>
+        <ul>
+            <li>Clear, honest pricing</li>
+            <li>Clean, ready-to-use space</li>
+            <li>Friendly and responsive communication</li>
+            <li>A venue that feels like “yours” for the day</li>
+        </ul>
     </div>
 </section>
-
 
 <!-- ================= CONTACT ================= -->
-<section id="contact" class="section">
-    <div class="container">
-        <h2 class="section-title">Contact Us</h2>
+<section id="contact" class="contact">
+    <h2>Contact Us</h2>
+    <p>Ready to check a date or ask a question? Reach out below.</p>
 
-        <form name="contact" method="POST" data-netlify="true" class="contact-form">
-            <input type="text" name="name" placeholder="Your Name" required />
-            <input type="email" name="email" placeholder="Your Email" required />
-            <textarea name="message" placeholder="Your Message" required></textarea>
-            <button type="submit" class="btn-gold">Send Message</button>
+    <div class="contact-wrapper">
+
+        <form class="contact-form">
+            <input type="text" placeholder="Name" required>
+            <input type="email" placeholder="Email" required>
+            <input type="text" placeholder="Phone" required>
+            <textarea placeholder="Event Details"></textarea>
+            <button type="submit">Send Message</button>
         </form>
 
-        <p class="contact-info">
-            WellBridge Social • 1633 Forestdale Blvd, Birmingham, AL  
-            <br>
-            Call or text <strong>205-504-6812</strong>
-        </p>
-    </div>
-</section>
+        <div class="contact-card">
+            <h3>Venue Information</h3>
+            <p><strong>WellBridge Social</strong></p>
+            <p>1633 Forestdale Blvd<br>Birmingham, AL</p>
+            <p><strong>Phone:</strong> 205-504-6812</p>
+        </div>
 
+    </div>
+
+</section>
 
 <!-- ================= FOOTER ================= -->
 <footer class="footer">
-    <p>© 2025 WellBridge Social. All Rights Reserved.</p>
+    © 2025 WellBridge Social. All rights reserved.
 </footer>
 
-
-<!-- MOBILE NAV SCRIPT -->
-<script src="script/script.js"></script>
-<script src="script/content-loader.js"></script>
-
+<!-- JS FILE -->
+<script src="script/main.js"></script>
 
 </body>
 </html>
