--- a/index.html
+++ b/index.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WellBridge Social</title>
 
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=DM+Sans:wght@400;500&display=swap" rel="stylesheet">
+    <!-- FONTS -->
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=DM+Sans:wght@300;400;500&display=swap" rel="stylesheet">
 
-    <!-- Stylesheet -->
-    <link rel="stylesheet" href="style/style.css" />
+    <!-- MAIN CSS (root folder) -->
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-<!-- ================= HEADER ================= -->
+<!-- ========================================================= -->
+<!-- HEADER / NAVIGATION -->
+<!-- ========================================================= -->
 <header class="header">
-    <div class="nav-container">
+    <div class="header-inner">
 
         <!-- LOGO -->
-        <a href="#hero" class="logo-link">
-            <img src="images/logo.png" alt="WellBridge Social Logo" class="logo-img">
-        </a>
+        <img src="images/logo.png" alt="WellBridge Social" class="logo">
 
         <!-- NAVIGATION -->
         <nav class="nav">
@@ -34,7 +34,7 @@
                 <li><a href="#events">PREVIOUS EVENTS</a></li>
                 <li><a href="#rentals">RENTALS</a></li>
                 <li><a href="#plan">PLAN YOUR EVENT</a></li>
-                <li><a href="#faqs">FAQ'S</a></li>
+                <li><a href="#faqs">FAQ’S</a></li>
                 <li><a href="#how">HOW IT STARTED</a></li>
                 <li><a href="#contact">CONTACT US</a></li>
             </ul>
@@ -43,19 +43,23 @@
     </div>
 </header>
 
-<!-- ================= HERO ================= -->
+
+<!-- ========================================================= -->
+<!-- HERO SECTION -->
+<!-- ========================================================= -->
 <section id="hero" class="hero">
 
     <p class="hero-location">BIRMINGHAM, AL • FORESTDALE</p>
 
     <h1 class="hero-title">
-        Beautiful, flexible<br>
-        space for your next<br>
+        Beautiful, flexible <br>
+        space for your next <br>
         event.
     </h1>
 
-    <p class="hero-subtext">
-        Host showers, birthday parties, meetings, repasts, and more at WellBridge Social. Two rooms, simple pricing, and a welcoming atmosphere.
+    <p class="hero-sub">
+        Host showers, birthday parties, meetings, repasts, and more at WellBridge Social.
+        Two rooms, simple pricing, and a welcoming atmosphere.
     </p>
 
     <div class="hero-buttons">
@@ -67,8 +71,12 @@
 
 </section>
 
-<!-- ================= WELCOME SECTION ================= -->
-<section id="welcome" class="welcome">
+
+<!-- ========================================================= -->
+<!-- WELCOME SECTION -->
+<!-- ========================================================= -->
+<section class="welcome">
+
     <div class="welcome-left">
         <h2>Welcome to WellBridge Social</h2>
 
@@ -79,168 +87,184 @@
         </p>
 
         <p>
-            With two flexible spaces, included tables and chairs, and optional linen rentals, you can style the room to match your colors and theme. Bring your own planner, caterer, DJ, and décor — or keep it simple and intimate.
+            With two flexible spaces, included tables and chairs, and optional linen rentals,
+            you can style the room to match your theme. Bring your own planner, caterer, DJ, and décor —
+            or keep it simple and intimate.
         </p>
     </div>
 
     <div class="welcome-card">
         <h3>Venue Details</h3>
         <ul>
-            <li><strong>Large Room Capacity:</strong> 100 guests</li>
-            <li><strong>Small Room Capacity:</strong> 50 guests</li>
+            <li>Large Room: up to 100 guests</li>
+            <li>Small Room: up to 50 guests</li>
             <li>Tables & chairs included</li>
             <li>Optional linen rentals</li>
         </ul>
+        <p><strong>Address:</strong> 1633 Forestdale Blvd, Birmingham, AL</p>
     </div>
+
 </section>
 
-<!-- ================= EVENTS ================= -->
+
+<!-- ========================================================= -->
+<!-- PREVIOUS EVENTS -->
+<!-- ========================================================= -->
 <section id="events" class="events">
     <h2>Previous Events</h2>
-    <p>Gallery coming soon as we add photos from upcoming events.</p>
+    <p>Gallery coming soon.</p>
 </section>
 
-<!-- ================= RENTALS ================= -->
+
+<!-- ========================================================= -->
+<!-- RENTAL INFORMATION -->
+<!-- ========================================================= -->
 <section id="rentals" class="rentals">
 
     <h2>2026 Rental Information</h2>
-    <p class="subtitle">Clear pricing for both the large and small rooms.</p>
+
+    <p class="rental-desc">
+        Pricing is based on room size, event type, day of the week, length of rental,
+        number of guests, linen rental, and whether alcohol is served.
+    </p>
 
     <div class="rental-note">
-        All rentals are for up to <strong>8 hours</strong>. Additional time is <strong>$100 per hour</strong>.
-        Events must end on time; setup + cleanup are included in your rental window.
+        All rentals include up to <strong>8 hours</strong>.  
+        Extra time is <strong>$100/hr</strong>.  
+        Setup & cleanup must fit within the rental window.
     </div>
 
     <div class="rental-grid">
-        <!-- LARGE ROOM -->
+
         <div class="rental-card">
             <h3>Large Room</h3>
-            <p><strong>Up to 100 guests</strong></p>
+            <p>Up to 100 guests</p>
 
-            <p class="price-title">Day Events (9AM – 5PM)</p>
+            <h4>Day Events (9AM – 5PM)</h4>
             <p class="price">$700</p>
 
-            <p class="price-title">Evening Events (8 hours)</p>
+            <h4>Evening Events (8 hours)</h4>
             <p class="price">$900</p>
         </div>
 
-        <!-- SMALL ROOM -->
         <div class="rental-card">
             <h3>Small Room</h3>
-            <p><strong>Up to 50 guests</strong></p>
+            <p>Up to 50 guests</p>
 
-            <p class="price-title">Day Events (9AM – 5PM)</p>
+            <h4>Day Events (9AM – 5PM)</h4>
             <p class="price">$600</p>
 
-            <p class="price-title">Evening Events (8 hours)</p>
+            <h4>Evening Events (8 hours)</h4>
             <p class="price">$700</p>
         </div>
+
     </div>
 
 </section>
 
-<!-- ================= PLAN YOUR EVENT ================= -->
+
+<!-- ========================================================= -->
+<!-- PLAN YOUR EVENT -->
+<!-- ========================================================= -->
 <section id="plan" class="plan">
     <h2>Plan Your Event</h2>
-    <p>We keep the process simple so you can focus on celebrating.</p>
 
-    <div class="plan-steps">
-        <div class="step">
+    <div class="plan-grid">
+        <div class="plan-step">
             <h3>1. Check Your Date</h3>
-            <p>Send your preferred date, time frame, and guest count.</p>
+            <p>Send your preferred date, timeframe, and guest count.</p>
         </div>
 
-        <div class="step">
+        <div class="plan-step">
             <h3>2. Reserve Your Room</h3>
-            <p>Secure your date with a 50% deposit and signed rental agreement.</p>
+            <p>Secure your date with a deposit + signed agreement.</p>
         </div>
 
-        <div class="step">
+        <div class="plan-step">
             <h3>3. Bring Your Vision</h3>
-            <p>Decorate and host your event the way you imagined it.</p>
+            <p>Decorate and host your event your way.</p>
         </div>
     </div>
+
 </section>
 
-<!-- ================= FAQ ================= -->
+
+<!-- ========================================================= -->
+<!-- FAQ -->
+<!-- ========================================================= -->
 <section id="faqs" class="faqs">
     <h2>FAQ’s</h2>
-    <p>Answers to common questions about renting the venue.</p>
 
     <details>
-        <summary>Can I bring my own food and cake?</summary>
-        <p>Yes, outside food is allowed.</p>
+        <summary>Can I bring my own food?</summary>
+        <p>Yes, outside food is welcome.</p>
     </details>
 
     <details>
-        <summary>Can I bring a DJ and loud music?</summary>
-        <p>Yes, DJs and speakers are welcome.</p>
+        <summary>Can I bring a DJ?</summary>
+        <p>Yes, DJs and speakers are allowed.</p>
     </details>
 
     <details>
         <summary>Do you offer tours?</summary>
-        <p>Yes, call to schedule a walkthrough.</p>
+        <p>Yes — call to schedule.</p>
     </details>
 
     <details>
         <summary>Do you provide décor?</summary>
-        <p>Clients bring their own décor.</p>
+        <p>Linen rentals available.</p>
     </details>
 </section>
 
-<!-- ================= HOW IT STARTED ================= -->
+
+<!-- ========================================================= -->
+<!-- HOW IT STARTED -->
+<!-- ========================================================= -->
 <section id="how" class="how">
     <h2>How It Started</h2>
 
     <p>
-        WellBridge Social was created by <strong>Lynn Wilkerson</strong> as a warm, flexible gathering space
+        WellBridge Social was created as a warm, flexible gathering space
         for families and organizations in Birmingham.
     </p>
 
     <div class="how-card">
         <h3>Our Commitment</h3>
         <ul>
-            <li>Clear, honest pricing</li>
+            <li>Clear and honest pricing</li>
             <li>Clean, ready-to-use space</li>
-            <li>Friendly and responsive communication</li>
-            <li>A venue that feels like “yours” for the day</li>
+            <li>Friendly communication</li>
+            <li>A venue that feels like “yours”</li>
         </ul>
     </div>
 </section>
 
-<!-- ================= CONTACT ================= -->
+
+<!-- ========================================================= -->
+<!-- CONTACT -->
+<!-- ========================================================= -->
 <section id="contact" class="contact">
+
     <h2>Contact Us</h2>
-    <p>Ready to check a date or ask a question? Reach out below.</p>
 
-    <div class="contact-wrapper">
+    <form class="contact-form">
+        <input type="text" placeholder="Your Name">
+        <input type="email" placeholder="Your Email">
+        <textarea placeholder="Event Details"></textarea>
+        <button type="submit">Send Message</button>
+    </form>
 
-        <form class="contact-form">
-            <input type="text" placeholder="Name" required>
-            <input type="email" placeholder="Email" required>
-            <input type="text" placeholder="Phone" required>
-            <textarea placeholder="Event Details"></textarea>
-            <button type="submit">Send Message</button>
-        </form>
-
-        <div class="contact-card">
-            <h3>Venue Information</h3>
-            <p><strong>WellBridge Social</strong></p>
-            <p>1633 Forestdale Blvd<br>Birmingham, AL</p>
-            <p><strong>Phone:</strong> 205-504-6812</p>
-        </div>
-
-    </div>
+    <p>1633 Forestdale Blvd, Birmingham, AL</p>
+    <p>Call or text <strong>205-504-6812</strong></p>
 
 </section>
 
-<!-- ================= FOOTER ================= -->
+
 <footer class="footer">
-    © 2025 WellBridge Social. All rights reserved.
+    <p>© 2025 WellBridge Social. All rights reserved.</p>
 </footer>
 
-<!-- JS FILE -->
-<script src="script/main.js"></script>
+<script src="script.js"></script>
 
 </body>
 </html>
